--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Redireccionando...</title>
   <script>
-    // Si ya hay usuario autenticado, podrías redirigir directamente a encuestas.html
-    const user = localStorage.getItem('user');
-    if (user) {
-      window.location.href = 'encuestas.html';
-    } else {
-      window.location.href = 'login.html';
-    }
+    // Redirigir a la app principal
+    window.location.href = 'encuestas.html';
   </script>
 </head>
 <body>
-  <p>Redireccionando a la aplicación...</p>
+  <p>Redireccionando a Encuestas...</p>
 </body>
 </html>
+
