--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   </div>
 
   <script type="module" src="app.js"></script>
+  <script type="module" src="firebaseMessaging.js"></script>
 
   <script>
     if ('serviceWorker' in navigator) {
