--- a/login.html
+++ b/login.html
@@ -17,9 +17,84 @@
     <hr />
     <button id="googleBtn">Ingresar con Google</button>
     <br><br>
-    <a href="index.html"><button>Volver al inicio</button></a>
+    <button id="volverBtn">Volver al inicio</button>
   </div>
 
-  <script type="module" src="app.js"></script>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, signInWithPopup, GoogleAuthProvider, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyAk0_WA4Zal3m7b_vOC70aPaQeYZqpe_00",
+      authDomain: "examenpwa.firebaseapp.com",
+      projectId: "examenpwa",
+      storageBucket: "examenpwa.appspot.com",
+      messagingSenderId: "103530121016",
+      appId: "1:103530121016:web:c0eef3027aa38c526063cd"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const provider = new GoogleAuthProvider();
+
+    const emailInput = document.getElementById("email");
+    const passwordInput = document.getElementById("password");
+    const confirmPasswordInput = document.getElementById("confirm-password");
+    const submitBtn = document.getElementById("submitBtn");
+    const toggleBtn = document.getElementById("toggleBtn");
+    const googleBtn = document.getElementById("googleBtn");
+    const volverBtn = document.getElementById("volverBtn");
+
+    let isLogin = true;
+
+    toggleBtn.addEventListener("click", () => {
+      isLogin = !isLogin;
+      document.getElementById("form-title").textContent = isLogin ? "Iniciar Sesión" : "Registrarse";
+      confirmPasswordInput.classList.toggle("hidden");
+      submitBtn.textContent = isLogin ? "Ingresar" : "Registrarse";
+      toggleBtn.textContent = isLogin ? "¿No tenés cuenta? Registrate" : "¿Ya tenés cuenta? Iniciar sesión";
+    });
+
+    submitBtn.addEventListener("click", async () => {
+      const email = emailInput.value;
+      const password = passwordInput.value;
+
+      if (!isLogin && password !== confirmPasswordInput.value) {
+        alert("Las contraseñas no coinciden");
+        return;
+      }
+
+      try {
+        if (isLogin) {
+          await signInWithEmailAndPassword(auth, email, password);
+        } else {
+          await createUserWithEmailAndPassword(auth, email, password);
+        }
+        window.location.href = "index.html"; // Redirige a encuestas
+      } catch (error) {
+        alert("Error: " + error.message);
+      }
+    });
+
+    googleBtn.addEventListener("click", async () => {
+      try {
+        await signInWithPopup(auth, provider);
+        window.location.href = "index.html";
+      } catch (error) {
+        alert("Error con Google: " + error.message);
+      }
+    });
+
+    volverBtn.addEventListener("click", () => {
+      window.location.href = "index.html";
+    });
+
+    // Redirigir automáticamente si ya está logueado
+    onAuthStateChanged(auth, user => {
+      if (user) {
+        window.location.href = "index.html";
+      }
+    });
+  </script>
 </body>
 </html>
