--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     </div>
   </div>
 
+<button onclick="logout()" class="close">Cerrar sesión</button>   
+
   <script type="module" src="app.js"></script>
   <script type="module" src="firebaseMessaging.js"></script>
 
